@startuml

title Application

package "Application" as appLayer {

    class App <<main>> {
        + setup() : void
        + loop() : void
    }

    note left of App
        The program entry point.
    end note

    class StateMachine <<control>> {
        + setState(state : IState*) : void
        + getState() : IState*
        + process() : void
    }

    note left of StateMachine
        The state machine executes always one
        state exclusive. It is responsible to
        enter/leave/process a state.
    end note

    interface IState {
        + {abstract} entry() : void
        + {abstract} process(sm : StateMachine&) : void
        + {abstract} exit() : void
    }

    note left of IState
        Defines the abstract state interface,
        which forces every inherited class
        to realize it.
    end note

    class StartupState <<control>>
    class LineSensorsCalibrationState <<control>>
    class ErrorState <<control>>
    class DrivingState <<control>>

    class ParameterSets <<entity>>

    note bottom of ParameterSets
        One of several provided parameter sets
        can be selected. The selected one is
        used during the competiton.
    end note

    note bottom of StartupState
        The system starts up and shows
        the team name on the display.
    end note

    note bottom of LineSensorsCalibrationState
        The robot turns several times the
        line sensors over the track for
        calibration.
    end note

    note bottom of ErrorState
        Error information is shown on display.
        Errors are fatal and require a restart of the robot.
    end note

    note bottom of DrivingState
        The robot follows the line and handles
        any detected gap.
    end note
}

note top of  appLayer
    Hint: See the application state behaviour
    in the corresponding state diagram.

    The ParameterSets supports several parameters,
    e.g. to initialize the PID controller and the
    top speed.
end note

App *--> StateMachine

StateMachine o--> "0..1" IState

IState <|.. StartupState: <<realize>>
IState <|.. LineSensorsCalibrationState: <<realize>>
IState <|.... ErrorState: <<realize>>
IState <|.... DrivingState: <<realize>>

DrivingState ..> ParameterSets: <<use>>

@enduml